# torchgfn

./: .codecov.yml  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  Untitled-1.ipynb  bitsequence.ipynb  compare_DB_to_VI.py  compare_TB_to_VI.py  dynamic_programming.py  dynamic_system.ipynb  four_kls.py  hypergrid_algo3.ipynb  hypergrid_tb.ipynb  launch_16.batch  launch_2.batch  launch_32.batch  launch_4.batch  launch_8.batch  launch_single.batch  make_sbatch_script.py  multi.plan.md  multi_sbatch.py  multi_sbatch2.py  new_hypergrid_tb.ipynb  off_policy.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-docs.txt  requirements.txt  scripts.py  setup.py  sweep_cmd_16.batch  sweep_cmd_2.batch  test.py  tmp_adcp_env.py  (+3 more)
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pre-commit.yml  publish.yml  python-package-conda.yml  test_tutorials.yml
benchmark/: ANALYSIS.md  README.md  benchmark_analysis.ipynb  benchmark_libraries.py  collect_results.py  dependencies.sh  profile_box.py  profile_hypergrid.py  sanity_check.py  setup_benchmark.sh
benchmark/lib_runners/: __init__.py  base.py  gflownet_runner.py  gfnx_runner.py  torchgfn_runner.py
benchmark/outputs/: .gitignore  .gitkeep
docs/: requirements_docs.txt
docs/markdown/: advanced.md  defining_environments.md  example.md  states_actions_containers.md
docs/source/: conf.py  index.rst
examples/: Readme.md
examples/envs/: Readme.md  __init__.py  box.py  hypergrid.py
examples/notebooks/: Readme.md  getting_started.ipynb
examples/scripts/: Readme.md  train.py  train_hypergrid.py
gflownet_playground/: gfn_models.py  losses.py  replay_buffer.py  utils.py
gflownet_playground/envs/: env.py  hypergrid.py
gflownet_playground/preprocessors/: base.py  hot.py  run_tests.py
gflownet_playground/samplers/: base.py
gfn/: README.md  bitseq_models.py  config.py  constants.py  estimators.py  gfn_losses.py  losses.py  models.py  modules.py  replay_buffer.py  train.py  utils.py  validate.py  working_config.py
gfn/configs/: __init__.py  env.py  module.py  parametrization.py  sampler.py
gfn/containers/: __init__.py  replay_buffer.py  states.py  sub_trajectories.py  trajectories.py  transitions.py
gfn/envs/: __init__.py  env.py  hypergrid.py  utils.py
gfn/losses/: __init__.py  base.py  detailed_balance.py  flow_matching.py  sub_trajectory_balance.py  trajectory_balance.py
gfn/parametrizations/: __init__.py  base.py  edge_flows.py  forward_backward_probs.py  forward_probs.py
gfn/preprocessors/: __init__.py  base.py  hot.py  run_tests.py
gfn/samplers/: __init__.py  action_samplers.py  actions_samplers.py  base.py  states_sampler.py  trajectories_sampler.py  transitions_sampler.py
gfn/trajectories/: __init__.py  dist.py
scripts/: dynamic_programming.py  tmp.py  train.py  train_box.py  train_hypergrid.py
scripts/configs/: __init__.py  env.py  loss.py  optim.py  parser.py  sampler.py
src/gfn/: __init__.py  actions.py  adapters.py  casting.py  constants.py  distributions.py  env.py  estimators.py  modules.py  preprocessors.py  samplers.py  states.py  typing.py  utils.py  validate.py
src/gfn/configs/: env.py  (+2 more)
testing/: README.md  conftest.py  test_actions.py  test_adaptor_estimator_gflownet_integration.py  test_chip_design.py  test_chunking.py  test_containers.py  test_containers_extended.py  test_custom_log_rewards.py  test_dependency_free.py  test_diffusion_estimators.py  test_diffusion_terminal_time.py  test_distributed_wrappers.py  test_environments.py  test_estimators.py  test_gflownet.py  test_gflownet_extended.py  test_gflownets.py  test_graph_states.py  test_gym_environments.py  test_hypergrid.py  test_local_search_sampler.py  test_modules.py  test_nan_handling.py  test_nonautoregressive_bitsequence_integration.py  test_parametrizations_and_losses.py  test_preprocessors.py  test_probability_calculations.py  test_regression_losses.py  test_replay_buffer.py  test_rtb.py  test_samplers.py  test_samplers_and_containers.py  test_samplers_and_trajectories.py  test_states.py  test_subtb_contributions.py  test_trust_pcl.py  test_utils.py  test_utils_modules.py
testing/gflownet/: test_mle_diffusion.py
testing/gym/: test_compile.py  test_diffusion_sampling_rtb.py
tutorials/: ENV.md  GFLOWNET.md  README.md
tutorials/examples/: README.md  __init__.py  compare_ring_speed.py  ddp_gfn.batch.small.4.slurm  ddp_gfn.small.16.slurm  ddp_gfn.small.4.mila.slurm  ddp_gfn.small.4.slurm  expert_data.py  mila.ddp_gfn.small.4.slurm  run_dist_ht.sh  test_graph_ring.py  test_scripts.py  train_bayesian_structure.py  train_bit_sequences.py  train_bitsequence_non_autoregressive.py  train_bitsequence_recurrent.py  train_box.py  train_box_legacy.py  train_chip_design.py  train_chip_design_medium.py  train_conditional.py  train_diffusion_rtb.py  train_diffusion_sampler.py  train_discreteebm.py  train_graph_ring.py  train_graph_triangle.py  train_hypergrid.py  train_hypergrid.py.bak  train_hypergrid_backward_sampling.py  train_hypergrid_buffer.py  train_hypergrid_ddp.py  train_hypergrid_exploration_examples.py  train_hypergrid_gafn.py  train_hypergrid_local_search.py  train_hypergrid_mog.py  train_hypergrid_multinode.py  train_hypergrid_optimized.py  train_hypergrid_simple.py  train_hypergrid_simple_conditional.py  train_hypergrid_simple_ls.py  (+5 more)
tutorials/misc/: bench_db_get_scores.py  bench_get_scores_all.py  bench_moddb_get_scores.py  bench_subtb_get_scores.py  intro_torchgfn_performance_tuning.ipynb  performance_tuning.py
tutorials/notebooks/: README.md  getting_started.ipynb  hypergrid_difficulty_comparison.ipynb  hypergrid_rewards.ipynb  intro_continuous.ipynb  intro_continuous_beta.ipynb  intro_discrete.ipynb  intro_gfn_continuous_line.ipynb  intro_gfn_continuous_line_simple.ipynb  intro_gfn_smiley.ipynb  intro_graph.ipynb  intro_graphs.ipynb  seven_segments.ipynb  torch_compile_discrete_states.ipynb  trust_pcl_equivalence.ipynb
tutorials/scripts/: README.md  train.py  train_box.py  train_discreteebm.py  train_hypergrid.py
(+278 files in other folders)
