[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[project]
name = "torchgfn"

[tool.poetry]
name = "torchgfn"
packages = [{include = "gfn", from = "src"}]
version = "1.1.1"
description = "A torch implementation of GFlowNets"
authors = ["Salem Lahlou <salemlahlou9@gmail.com>", "Joseph Viviano <joseph@viviano.ca>", "Victor Schmidt <vsch@pm.me>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[tool.poetry.dependencies]
# core dependencies.
einops = ">=0.6.1"
numpy = "<2.*"
python = "^3.10"
torch = ">=2.6.0"
tensordict = ">=0.6.1"
torch_geometric = ">=2.6.1"

# dev dependencies.
black = { version = "24.3", optional = true }
flake8 = { version = "*", optional = true }
pyright = {version = "1.1.395", optional = true}
isort = { version = "5.13.2", optional = true }
gitmopy = { version = "*", optional = true }
myst-parser = { version = "*", optional = true }
pre-commit = { version = "*", optional = true }
pytest = { version = "*", optional = true }
renku-sphinx-theme = { version = "*", optional = true }
sphinx = { version = ">=6.2.1", optional = true }
sphinx_rtd_theme = { version = "*", optional = true }
sphinx-autoapi = { version = ">=3.0.0", optional = true }
sphinx-math-dollar = { version = "*", optional = true }
tox = { version = "*", optional = true }
nbmake = { version = "*", optional = true }

# scripts dependencies.
tqdm = { version = "*", optional = true }
wandb = { version = "*", optional = true }
scikit-learn = {version = "*", optional = true }
scipy = { version = "*", optional = true }
matplotlib = { version = "*", optional = true }

[tool.poetry.extras]
dev = [
    "black",
    "pyright",
    "gitmopy",
    "myst-parser",
    "pre-commit",
    "pytest",
    "renku-sphinx-theme",
    "sphinx_rtd_theme",
    "sphinx-autoapi",
    "sphinx-math-dollar",
    "sphinx",
    "tox",
    "flake8",
    "nbmake",
]

scripts = ["tqdm", "wandb", "scikit-learn", "scipy", "matplotlib"]

all = [
    "black",
    "flake8",
    "pyright",
    "matplotlib",
    "myst-parser",
    "pre-commit",
    "pytest",
    "renku-sphinx-theme",
    "scikit-learn",
    "scipy",
    "sphinx_rtd_theme",
    "sphinx-autoapi",
    "sphinx-math-dollar",
    "sphinx",
    "tox",
    "tqdm",
    "wandb",
    "nbmake",
]

[tool.poetry.urls]
"Homepage" = "https://gfn.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/saleml/gfn/issues"

[tool.black]
target_version = ["py310"]
line_length = 89
include = '\.pyi?$'
extend-exclude = '''/(\.git|\.hg|\.mypy_cache|\.ipynb|\.tox|\.venv|build)/g'''

[tool.pyright]
pythonVersion = "3.10"
include = ["src/gfn", "tutorials/examples", "testing"]  # Removed ** globstars
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*", # Exclude dot files and folders
]

strict = [

]
# This is required as the CI pre-commit does not dl the module (i.e. numpy)
# Therefore, we have to ignore missing imports
# Removed "strict": [], as it's redundant with typeCheckingMode

typeCheckingMode = "basic"

# Removed enableTypeIgnoreComments, not available in pyproject.toml, and bad practice.

# Mapping report* settings:
reportMissingImports = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportPrivateUsage = "warning"
reportUntypedFunctionDecorator = "none"
reportMissingTypeStubs = false
reportUnboundVariable = "warning"
reportGeneralTypeIssues = "none"
reportAttributeAccessIssue = false

[tool.pytest.ini_options]
reportOptionalMemberAccess = "error"
filterwarnings = [
    "ignore::pytest.PytestConfigWarning",
]
# Add some useful, commonly used settings.
reportUnusedImport = true
reportUnusedVariable = true
reportOptionalSubscript = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true

[tool.tox]
legacy_tox_ini = '''
[tox]
min_version = 4.0
env_list = test_env

[testenv]
deps = pytest
commands = pytest -s
'''

# Black-compatibility enforced.
[tool.isort]
profile = "black"
line_length = 89
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest]
pythonpath = [
    "tutorials",
    "testing"
]